# bg-vanish-mcp

./: .gitignore  LICENSE  README.md  bg_vanish_mcp.py  pyproject.toml  requirements.txt  server.py  test_server.py
docs/: index.html
pages/: index.html
pages/assets/: index-DmUp4foG.css  index-orRWUDtI.js
web/: index.html  package-lock.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: CTA.jsx  CopyBtn.jsx  DocsReference.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Installation.jsx  Integrations.jsx  Navbar.jsx
web/src/utils/: clipboard.js
